# pacrunner

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  acinclude.m4  bootstrap-configure  configure.ac
doc/: manager-api.txt
plugins/: mozjs.c  mozjs.cc  v8.cc
src/: js.c  js.h  js_funcs.c  manager.c  pacrunner.h  proxy.c
unit/: test-mozjs.c  test-pacrunner.c
unit/suite/: manual_basic.test  manual_exclude.test  pac_basic.test  pac_direct.test  proxy_domain.test  stub.test
